# sdl_triangle

./: .gitignore
.github/workflows/: ci.yml  ci_linux.yml  ci_windows.yml
d3d9_fog_test/: CMakeLists.txt
d3d9_fog_test/src/: d3d9_fog_test.cpp
d3d9_hlsl_fx_square/: CMakeLists.txt
d3d9_hlsl_fx_square/src/: MinimalEffect.fx  square.cpp
d3d9_hlsl_teapot/: CMakeLists.txt
d3d9_hlsl_teapot/src/: d3dUtility.cpp  d3dUtility.h  transform.cpp
d3d9_hlsl_triangle/: CMakeLists.txt
d3d9_hlsl_triangle/src/: min-effect.fx  min.vs  triangle.cpp
d3d9_square/: CMakeLists.txt
d3d9_square/src/: d3d9_square.cpp
d3d9_triangle/: CMakeLists.txt
d3d9_triangle/src/: triangle.cpp
hlsl_compile/: CMakeLists.txt
hlsl_compile/src/: hlsl_compile.cpp  min.ps  unknwn.h  vkd3d_hlsl.h  windows_base.h
sdl_d3d9_hlsl_triangle/: CMakeLists.txt  CMakePresets.json
sdl_d3d9_hlsl_triangle/shaders/fxc/: min_ps.fxc  min_vs.fxc
sdl_d3d9_hlsl_triangle/shaders/hlsl/: min_ps.hlsl  min_vs.hlsl
sdl_d3d9_hlsl_triangle/shaders/vkd3d/: min_ps.vkd3d  min_vs-no_warning.vkd3d  min_vs.vkd3d
sdl_d3d9_hlsl_triangle/src/: d3d_utility.cpp  d3d_utility.h  sdl_d3d9_hlsl_triangle.cpp  vkd3d_hlsl.h
sdl_d3d9_triangle/: CMakeLists.txt  conanfile.py
sdl_d3d9_triangle/src/: d3d_utility.cpp  d3d_utility.h  sdl_d3d9_triangle.cpp
sdl_pure_triangle/: CMakeLists.txt  conanfile.py
sdl_pure_triangle/src/: sdl_pure_triangle.cpp
